<resources>
    <string name="app_name">Daily Journal</string>
    <string name="feeling_today">How are you feeling today?</string>
    <string name="make_note">Make a journal note</string>
    <string name="done">Done</string>
    <string name="read_more">Read more</string>
    <string name="Date">Tuesday, April 18th</string>
    <string name="happy_face_icon">happy face icon</string>
    <string name="gratefulness">Today I\'m grateful for...</string>
    <string name="today_best_part">Best part of today was...</string>
    <string name="my_note">My note:</string>
    <string name="add_photo">choose a photo from gallery</string>
    <string name="add_location">add location</string>
    <string name="done_btn">done_btn</string>
    <string name="grateful_edit">type what are you grateful for today</string>
    <string name="best_part_edit">type what was your best part of the day</string>
    <string name="own_note_edit">type your own note</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>