<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:text="@string/Date"
            android:textSize="20sp"
            tools:layout_marginLeft="15dp" />

        <ImageView
            android:id="@+id/imgMood"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/happy_face_icon"
            android:scaleType="fitCenter"
            android:src="@drawable/face_temporary"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="12dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/gratefulness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gratefulness"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/gratefulness_edit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="12dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/today_best_part"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/today_best_part"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/today_edit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="12dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/my_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_note"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="29dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="29dp"
            android:background="#989898"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_photo_camera_24" />


        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="3dp"
            android:text="@string/add_photo"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_add_location_24" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:text="@string/add_location"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_weight="2"
            android:text="@string/done" />
    </LinearLayout>


</LinearLayout>