<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/blue_light">

    <!--HEADER-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgBook"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/book_icon" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/app_name"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    </LinearLayout>

    <!--HOW ARE YOU TODAY-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:background="@drawable/round_style"
        android:backgroundTint="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/feeling_today"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <!--EMOTIONS-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/imgFace1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="fitCenter"
                android:background="@drawable/custum_input"
                android:paddingHorizontal="4dp"
                android:src="@drawable/mood_icon1" />
            <ImageButton
                android:id="@+id/imgFace2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="fitCenter"
                android:background="@drawable/custum_input"
                android:paddingHorizontal="4dp"
                android:src="@drawable/mood_icon2" />
            <ImageButton
                android:id="@+id/imgFace3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="fitCenter"
                android:background="@drawable/custum_input"
                android:paddingHorizontal="4dp"
                android:src="@drawable/mood_icon3" />
            <ImageButton
                android:id="@+id/imgFace4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="fitCenter"
                android:paddingHorizontal="4dp"
                android:background="@drawable/custum_input"
                android:src="@drawable/mood_icon4" />
            <ImageButton
                android:id="@+id/imgFace5"
                android:layout_width="60dp"
                android:paddingHorizontal="4dp"
                android:layout_height="60dp"
                android:scaleType="fitCenter"
                android:background="@drawable/custum_input"
                android:src="@drawable/mood_icon5" />
        </LinearLayout>

        <!--BUTTONS-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/blue_light"
                android:onClick="makeJournalNote"
                android:text="@string/make_note"
                android:textColor="@color/blue_darker"
                android:textSize="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue_light"
                android:textColor="@color/blue_darker"
                android:text="@string/done"
                android:textSize="10dp"
                android:layout_margin="10dp"/>
        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/notesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="20dp"/>

</LinearLayout>